Fix Cards Scoial icons hover overlap

--- a/website3.0/stylesheets/teams.css
+++ b/website3.0/stylesheets/teams.css
@@ -159,11 +159,31 @@ body {
   width: 85%;
   height: 100%;
 }
-.social-links {
+
+.social-links 
+{
   width: 16%;
   padding: 10px;
   padding-left: 0px !important;
   padding-right: 0px !important;
+  margin-left: 15px;
+  margin-right: 15px;
+  
+  /* Background and border */
+  border-radius: 10px;
+   
+  /* Box shadow */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  
+  /* Transition for hover effects */
+  transition: all 0.3s ease-in-out;
+}
+
+/* Hover effects */
+.social-links:hover 
+{
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  transform: scale(1.02);
 }
 .social-links-items {
   display: flex;
